--- a/public/stylesheet/style-home.css
+++ b/public/stylesheet/style-home.css
@@ -1,5 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,400italic,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,500,600,200);
+@import url(https://fonts.googleapis.com/css?family=Crimson+Text);
+@import url(https://fonts.googleapis.com/css?family=Libre+Baskerville);
+@import url(https://fonts.googleapis.com/css?family=Lora);
 
 body {
 	background: #EAEDF2;
@@ -250,6 +253,9 @@ hr {
 
 #ticket-section2 {
 	display: block;
+	height: 176px;
+	overflow: auto;
+	text-align: left;
 }
 
 .ticket-title {
@@ -313,3 +319,30 @@ textarea {
 	margin-top: 14px;
 	margin-left: 30px;
 }
+
+.topic-meta h4 {
+	margin: 0;
+	font-family: 'Lora';
+	font-size: 18px;
+	font-weight: lighter;
+	color: white;
+}
+
+.topic-meta {
+	float: left;
+	text-align: left;
+	padding: 8px 5px 5px 8px;
+	border-bottom: 1px solid white;
+	width: 695px;
+}
+
+.topic-meta span {
+	font-family: 'Lato';
+	font-size: 12px;
+	color: #FFCC80;
+}
+
+.topic-status {
+	float: right;
+}
+
