--- a/views/forum.ejs
+++ b/views/forum.ejs
@@ -7,22 +7,23 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet/animate.css">
 	<script type="text/javascript" src="angularjs/angular.min.js"></script>
 	<script type="text/javascript" src="angularjs/modules/angular-translate.js"></script>
+	<script type="text/javascript" src="angularjs/angular-cookies.js"></script>
+	<script type="text/javascript" src="angularjs/angular-translate-storage-cookie.js"></script>
 	<script type="text/javascript" src="angularjs/modules/app.js"></script>
 	<script type="text/javascript" src="angularjs/modules/services/translate.js"></script>
 	<script type="text/javascript" src="angularjs/modules/controllers/controller.js"></script>
 </head>
-<body>
+<body ng-controller="userCtrl">
 	<header id="header">
 		<div class="bg-top-header">
 			<div class="container">
 				<div class="row">
 					<div class="header-title col-md-2">
 						<h1>Framework1</h1>
-						{{'PLH_USER' | translate}}
 					</div>
 					<div class="col-md-10">
 						<form id="searchbox" action="">
-							<input type="text" placeholder="Search..." style="width: 400px; height: 40px;" />
+							<input type="text" placeholder="{{'FORUM_SRCH' | translate}}..." style="width: 400px; height: 40px;" />
 							<button type="submit" value="">
 								<img src="images/search-icon.svg">
 							</button>
@@ -40,7 +41,7 @@
 			<form method="GET">
 				<div class="text-search">
 					<div class="input-container">
-						<input onclick="show()" class="input-title" maxlength="90" name="post-title" type="text" placeholder="Click here to start your new topic">
+						<input onclick="show()" class="input-title" maxlength="90" name="post-title" type="text" placeholder="{{'FORUM_CNT' | translate}}">
 						<select class="select-items" name="category">
 							<option value="volvo">Volvo</option>
 							<option value="saab">Saab</option>
@@ -54,11 +55,11 @@
 				</div>
 				<div class="row" id="topic-submit">
 					<div class="col-md-6">
-						<a href="">Show preview</a>
+						<a href="">{{'FORUM_SHOW' | translate}}</a>
 					</div>
 					<div class="col-md-6 topic-submit-button">
-						<button class="topic-creat" type="submit"> Create Topic </button>
-						<span onclick="hide()" style="cursor:pointer"><img src="images/cross-icon.svg">&nbsp;&nbsp;Cancel</span>
+						<button class="topic-creat" type="submit"> {{'FORUM_CT' | translate}} </button>
+						<span onclick="hide()" style="cursor:pointer"><img src="images/cross-icon.svg">&nbsp;&nbsp;{{'INDEX_CANCEL' | translate}}</span>
 					</div>
 				</div>
 			</form>
@@ -68,24 +69,24 @@
 			</div>
 			<div class="col-md-3">
 				<div class="forum-statistic">
-					<h5>STATISTICS</h5>
+					<h5>{{'FORUM_STAT' | translate}}</h5>
 					<hr />
-					<h3>&nbsp;&nbsp;&nbsp;&nbsp;15 MEMBERS</h4>
+					<h3>&nbsp;&nbsp;&nbsp;&nbsp;15 {{'FORUM_NB.MEM' | translate}}</h4>
 					<hr />
-					<h3>&nbsp;&nbsp;&nbsp;&nbsp;111 THREADS</h4>
+					<h3>&nbsp;&nbsp;&nbsp;&nbsp;111 {{'FORUM_NB.THR' | translate}}</h4>
 					<hr />
-					<h3>&nbsp;&nbsp;&nbsp;&nbsp;0 REPLIES</h3>
+					<h3>&nbsp;&nbsp;&nbsp;&nbsp;0 {{'FORUM_NB.REP' | translate}}</h3>
 				</div>
 				<div class="forum-category">
-					<h5>CATEGORIES</h5>
+					<h5>{{'FORUM_CTG' | translate}}</h5>
 					<hr />
 				</div>
 				<div class="forum-hot-topic">
-					<h5>HOT TOPICS</h5>
+					<h5>{{'FORUM_TOP' | translate}}</h5>
 					<hr />
 				</div>
 				<div class="forum-user">
-					<h5>TOP USERS</h5>
+					<h5>{{'FORUM_HU' | translate}}</h5>
 				</div>
 			</div>
 		</div>
@@ -100,5 +101,12 @@
 			document.getElementById('topic-submit').style.display = 'none';
 		}
 	</script>
+	<div class="footer">
+		<hr />
+		<div class="navigation-i18">
+			<button class="btn btn-primary ng-scope" ng-click="changeLanguage('en')" translate="BUTTON_LANG_EN"></button>
+			<button class="btn btn-primary ng-scope" ng-click="changeLanguage('fr')" translate="BUTTON_LANG_FR"></button>
+		</div>
+	</div>
 </body>
 </html>
