--- a/public/stylesheet/style-home.css
+++ b/public/stylesheet/style-home.css
@@ -53,7 +53,7 @@ hr {
 
 .home-profile-pic-1 ul li {
 	float: left;
-	padding: 3px 0 3px 20px;
+	padding: 3px 70px 3px 20px;
 }
 
 .home-profile-pic-1 {
@@ -349,5 +349,20 @@ textarea {
 
 .topic-status {
 	float: right;
+}
+
+.remove_elem {
+	float: right;
+	margin: 0;
+}
+
+.remove_elem button {
+	padding: 0;
+	background: none;
+	border: none;
+}
+
+.remove_elem button:focus {
+	outline: 0;
 }
 
