--- a/public/stylesheet/style-ticket.css
+++ b/public/stylesheet/style-ticket.css
@@ -21,6 +21,20 @@ a:hover {
 	text-decoration: none;
 }
 
+select:focus {
+	outline: 0;
+}
+
+select {
+	border: none;
+	background: #EDEDED;
+}
+
+.select-items {
+	margin-top: 5px;
+	width: 100px;
+}
+
 .ticket-navbar {
 	height: 60px;
 	background-color: #212121;
@@ -101,4 +115,16 @@ a:hover {
 }
 .reply-title img {
 	float: right;
+}
+
+.sub-reply-content {
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #CFD8DC;
+	padding: 0px 20px 0px 20px;
+}
+
+.jolie {
+	margin-left: 370px;
 }
